# just_a_test

patience/Patience/: Patience.sln
patience/Patience/Patience/: Patience.csproj  Program.cs  ProgramConfig.cs  Utility.cs
patience/Patience/Patience/Comparing/: Compare.cs  DefaultCompare.cs  ICompare.cs
patience/Patience/Patience/Example/: test.yml
patience/Patience/Patience/Loggers/: Terminal.cs
patience/Patience/Patience/Properties/: launchSettings.json
patience/Patience/Patience/Rapports/: IRapporter.cs  Rapport.cs  TextRapport.cs
patience/Patience/Patience/Tests/: Test.cs  TestConfig.cs  TestResult.cs  (+2 more)
patience/dummy/: .gitignore  CMakeLists.txt  compile.sh  gen_vs2022.sh  test.yml
patience/dummy/brokenConfig/: CMakeLists.txt
patience/dummy/brokenConfig/test/: test.yml
patience/dummy/failingTest/: CMakeLists.txt  failingTest.cpp
patience/dummy/failingTest/test/: test.yml
patience/dummy/failingTest/test/ref/: failing_test.ref
patience/dummy/longTest/: CMakeLists.txt  longTest.cpp
patience/dummy/longTest/test/: test.yml
patience/dummy/longTest/test/ref/: long_test.ref  too_long_test.ref
patience/dummy/outputFiles/: CMakeLists.txt  outputFiles.cpp
patience/dummy/outputFiles/test/: test.yml
patience/dummy/outputFiles/test/ref/: correct_output.ref  wrong.txt  wrong_output.ref
patience/dummy/simpleArgs/: CMakeLists.txt  test.yml
patience/dummy/simpleArgs/addNumbers/: CMakeLists.txt  addNumbers.cpp  strings.h
patience/dummy/simpleArgs/addNumbers/test/: test.yml
patience/dummy/simpleArgs/addNumbers/test/ref/: add_negative_numbers.ref  add_numbers.ref
patience/dummy/simpleArgs/dumpArgs/: CMakeLists.txt  dumpArgs.cpp
patience/dummy/simpleArgs/dumpArgs/test/: test.yml
patience/dummy/simpleArgs/dumpArgs/test/ref/: no_args.ref  some_args.ref
snippets/C++/: BinaryFile.cpp  BinaryFile.h  BinaryFile.inl  BitArray.cpp  BitArray.h  BitArray.inl  BitHacks.h  Defilable.h  Filesystem.cpp  Filesystem.h  LinearMath.h  Logger.cpp  Logger.h  Named.h  Resource.cpp  Resource.h  RingBuffer.h  Stopwatch.cpp  Stopwatch.h  Strings.cpp  Strings.h  Surface.cpp  Surface.h  Syncable.h  System.cpp  System.h  Utility.h  helper_math.h
snippets/cmake/: assign_source_group.cmake  bin2c.cmake  copy_files_post.cmake  get_relative_directory.cmake  subdirs.cmake
(+3 files in other folders)
